# foldr

./: CONFIGURATION.md  CONFIGURATION_KEYS.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  build.rs
fetch_tester/: index.js  package-lock.json  package.json
fetch_tester/public/: .foldrmanifest.json  template.foldr
src/: cli.rs  config.rs  globals.rs  main.rs  network.rs  templates.rs  zip.rs
src/commands/: command.rs  config.rs  delete.rs  fetch.rs  list.rs  mod.rs  new.rs  purge.rs  save.rs  show.rs  update.rs
