[package]
name = "foldr"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
description = "Foldr, the blazing fast templating tool"
repository = "https://github.com/TheExiledCat/foldr-cli"
readme = "README.md"
[dependencies]
bytesize = "2.0.1"
clap = { version = "4.5.41", features = ["derive"] }
clap_complete = "4.5.55"
crossterm = "0.29.0"
dirs = "6.0.0"
inquire = "0.7.5"
itertools = "0.14.0"
ptree = "0.5.2"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
ureq = "3.0.12"
walkdir = "2.5.0"
zip = "4.3.0"

[features]
tui = []


[profile.release]
strip = true
panic = "abort"
lto=true
codegen-units = 1
debug = false

[build-dependencies]
syn = { version = "1", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

